# nhk-2024-B

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  Makefile  nhk2024b.code-workspace
common_libs/: CMakeLists.txt  FindFutaba_Puropo.cmake  FindIkakoRobomas.cmake  FindMotorController.cmake  FindPS4_RX.cmake  Findcan_servo.cmake  FindikakoMDC.cmake  Findikako_rohm_md.cmake  FindikarashiCAN_mk2.cmake  Findmbed-os.cmake  MbedOS.cmake  bno055.cmake  ikako_c620.cmake  ikako_rohm_md.cmake  syoch-robotics
common_libs/nhk2023-b/: .gitignore  CMakeLists.txt  Cargo.toml  build.rs
common_libs/nhk2023-b/cxx/: logger.cpp  mem.cpp  ps4_con.cpp
common_libs/nhk2023-b/inc/nhk2024b/: controller_network.hpp  fep.hpp  fep_ps4_con.hpp  ffi_mem.hpp  led_tape.hpp  node_id.hpp  ps4_con.hpp  ps4_vs.hpp  test_ps4_fep.hpp  types.hpp
common_libs/nhk2023-b/inc/nhk2024b/robot1/: controller.hpp  svc.hpp
common_libs/nhk2023-b/inc/nhk2024b/robot2/: controller.hpp  svc.hpp
common_libs/nhk2023-b/nhk2023-b/: common.hpp
common_libs/nhk2023-b/nhk2024b/: types.hpp
common_libs/nhk2023-b/src/: allocator.rs  common.rs  ffi_mem.rs  lib.rs  mem.rs
common_libs/nhk2023-b/src/logger/: binding_logger.rs  logger.rs
common_libs/robobus/: CMakeLists.txt
common_libs/robobus/docs/: api-note.md  fw-note
common_libs/robobus/include/: robo-bus.hpp
common_libs/robobus/include/robobus/: base_coroutine.hpp  context.hpp  loop.hpp  promise.hpp  root_context.hpp  sleep.hpp
common_libs/robobus/include/types/: data_ctrl_marker.hpp  device_id.hpp  message_type.hpp  multicast_session_id.hpp
common_libs/robobus/types/: p2p_pipe_id.hpp
common_libs/static-mbed-os/: CMakeLists.txt  Makefile  library.cmake  mbed-os
common_libs/static-mbed-os/cmake/: FindStaticMbedOS.cmake  UseStaticMbedOS.cmake
common_libs/static-mbed-os/source/: mbed-os.cpp
connection-host/: Cargo.toml
connection-host/src/: main.rs
connection-test/: .gitignore  CMakeLists.txt  Makefile  PS4_RX  im920_test.hpp  main.cpp  mbed_app.json  mbed_clock.hpp  mbed_config.h  platform.hpp  snif.py
connection-test/apps/: can_debug.hpp  robobus_test.hpp
connection-test/robobus/: robo-bus.hpp
connection-test/robobus/docs/: api-note.md  network.md
connection-test/robobus/internal/: signal.hpp
connection-test/robobus/types/: device_id.hpp  message_id.hpp
connection-test/src/: CMakeLists.txt  main.cpp  platform.hpp
connection-test/src/app/: CMakeLists.txt  main.cpp  platform.hpp
connection-test/src/app_rs/: CMakeLists.txt  Cargo.toml  build.rs
connection-test/src/app_rs/src/: binding_basic.rs  lib.rs
connection-test/src/wrapper/src/: wrapper.cpp
controller-stm32/: CMakeLists.txt  Makefile  USBHost  a  ikako_c620
controller-stm32/src/: CMakeLists.txt  device.hpp  endpoint.cpp  endpoint.hpp  hc.cpp  hc.hpp  hcd.cpp  hcd.hpp  main.cpp
controller-stm32/src/app/: CMakeLists.txt  app.hpp  main.cpp
controller-stm32/src/otg/: app.hpp  device.hpp  endpoint.cpp  endpoint.hpp  hc.cpp  hc.hpp  hcd.cpp  hcd.hpp
controller-stm32/src/usb_otg_cpp/: CMakeLists.txt
controller-stm32/src/usb_otg_cpp/usb/: device.cpp  device.hpp  endpoint.cpp  endpoint.hpp
controller-stm32/src/usb_otg_packets/: CMakeLists.txt
controller-stm32/src/usb_otg_packets/usb/: hc.cpp  hc.hpp  hcd.cpp  hcd.hpp  packets_wrapper.hpp
controller-stm32/src/usb_rs/: CMakeLists.txt  Cargo.toml  build.rs
controller-stm32/src/usb_rs/.cargo/: config.toml
controller-stm32/src/usb_rs/src/: allocator.rs  app.rs  common.rs  lib.rs  logger.rs
controller-stm32/src/usb_rs/src/logger/: binding_logger.rs  host_logger.rs  logger.rs  mod.rs
controller-stm32/src/usb_rs/src/usb/: control_ep.rs  ep0.rs  fake_ep0.rs  hc.rs  hc_status.rs  hcd.rs  mod.rs  parsing_context.rs  physical_ep0.rs  raw_hc_status.rs  raw_urb_status.rs  urb_error.rs  urb_result.rs  usb_ep0.rs  usb_string.rs
controller-stm32/src/usb_rs/src/usb_core/: control_ep.rs  (+5 more)
controller-stm32/src/wrapper/: CMakeLists.txt
controller-stm32/src/wrapper/inc/: wrapper.h
controller-stm32/src/wrapper/src/: wrapper.cpp
framework-test/: .gdb_history  CMakeLists.txt  Makefile  common_libs  main.cpp  measurement.hpp  test_clock.hpp
framework-test/framework/: base_coroutine.hpp  context.hpp  debug_adapter.hpp  debug_info.hpp  debug_node.hpp  loop.hpp  root_context.hpp  sleep.hpp  time_context.hpp
robot-bridge/: CMakeLists.txt  Makefile  can_servo  ikakoMDC.lib  main.cpp  main.hpp  mbed_app.json  rohm_md.hpp
robot-bridge/src/: CMakeLists.txt  a.c  app.cpp  bridge.hpp  communication.cpp  main.hpp
robot-bridge/src/app/: CMakeLists.txt  app.cpp  app.hpp  bridge.hpp  can_servo.hpp  communication.hpp  ikako_robomas_bus.hpp  main.cpp  main.cpp.0  main.hpp  rohm_md.hpp  rohm_md_bus.hpp  value_test.hpp
robot-collect/src/: CMakeLists.txt  app.cpp  collect.hpp  communication.cpp  communication.hpp
robot-collect/src/app/: CMakeLists.txt  app.hpp  collect.hpp  main.hpp
robot1-main/: .gitignore  CMakeLists.txt  IkakoRobomas  Makefile  MotorController  bno055.lib  ikakoMDC.lib  ikako_c620.lib  ikako_rohm_md  main.cpp  main.hpp  mbed_config.h  robot1-main.hpp
robot1-main/src/: CMakeLists.txt  app.cpp  communication.cpp  identify.h  main.cpp  main.hpp  robot1-main.hpp
robot2-bridge/: CMakeLists.txt  Makefile  app.hpp  bridge.hpp  main.hpp
robot3-collect-esp32/: CMakeLists.txt  sdkconfig  sdkconfig.old
robot3-collect-esp32/main/: BluetoothHID.cpp  BluetoothHID.h  CMakeLists.txt  DS4Controller.cpp  DS4Controller.h  app.hpp  collect.hpp  esp_hid_gap.c  main.cpp  main.hpp
src/robot3-collect/: CMakeLists.txt  collect.hpp  main.hpp
usb/: ArduinoUsbHostShield  CMakeLists.txt  Makefile  STM32F446RETX_FLASH.ld  USB_Host_Shield_2.0  a.out  main.c  stm32f4xx_hal_msp.c
usb/App/Inc/: stm32f4xx_hal_conf.h
usb/App/Src/: main.c
usb/Core/Inc/: im920.h  logger.h  ps4_node.hpp  stm32f4xx_hal_conf.h  stm32f4xx_it.h
usb/Core/Src/: main.c  main.cpp  stm32f4xx_hal_msp.c  sysmem.c  system_stm32f4xx.c
usb/Core/Startup/: startup_stm32f446retx.s
usb/USB_HOST/App/: usb_host.c
usb/src/app/: CMakeLists.txt  main.cpp  main.cpp.b
(+137 files in other folders)
