set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} /workspaces/nhk-2024-b/common_libs)




# find_package(ikakoMDC REQUIRED)
# find_package(ikarashiCAN_mk2 REQUIRED)
# find_package(PS4_RX REQUIRED)
# find_package(IkakoRobomas REQUIRED)
# find_package(MotorController REQUIRED)
# find_package(can_servo REQUIRED)
# find_package(ikako_rohm_md REQUIRED)
# find_package(Futaba_Puropo REQUIRED)

# include(bno055)
# include(ikako_c620)


add_subdirectory(nhk2023-b)
add_subdirectory(syoch-robotics/libs)