[package]
name = "connection-host"
version = "0.1.0"
edition = "2021"

[dependencies]
# srobo_base = { git = "https://github.com/nnctroboticsclub/srobo_base.git" }
# im920_rs = { git = "https://github.com/nnctroboticsclub/im920_rs.git" }
srobo_base = { path = "/workspaces/srobo_base", features = ["std"] }
im920_rs = { path = "/workspaces/im920_rs" }