[package]
name = "nhk2024b-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[build-dependencies]
cbindgen = "0.27.0"
bindgen = "0.65.1"

[dependencies]
srobo_base = { git = "ssh://git@github.com/nnctroboticsclub/srobo_base.git" }
im920_rs = { git = "ssh://git@github.com/nnctroboticsclub/im920_rs.git" }