[package]
name = "app_rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[build-dependencies]
bindgen = "0.65.1"

[dependencies]
panic-semihosting = "0.5.2"
cortex-m-rt = "0.7.1"

synopsys-usb-otg = { version = "0.4.0", features = ["hs", "cortex-m"]}

srobo_base = { path = "../common_libs/srobo_base", default-features = false, features = ["stm32_f446", "alloc"] }
im920_rs = { path = "../common_libs/im920_rs" }