[package]
name = "usb_rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]


[dependencies]
panic-semihosting = "0.5.2"
cortex-m-rt = "0.7.1"
stm32f4xx-hal = { version = "0.17.1", features = ["stm32f446", "usb_fs"] }
synopsys-usb-otg = { version = "0.4.0", features = ["hs", "cortex-m"]}

[build-dependencies]
bindgen = "0.65.1"